⬆️  🔥 Update the paths to delete staging and test directories
This is a follow-on to these changes in the base image:
https://github.com/e-mission/e-mission-server/commit/5ad50dae9fc85c806d39b575b3a23642a90a5608

--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -25,10 +25,12 @@ COPY *.py .
 # root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py27-osx-no-binary/lib/python2.7/site-packages/requests-2.19.1-py2.7.egg-info/PKG-INFO
 # root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Django-2.1.dist-info/METADATA
 # root/miniconda-4.12.0/pkgs/conda-4.12.0-py38h06a4308_0/info/test/tests/data/env_metadata/py36-osx-whl/lib/python3.6/site-packages/Scrapy-1.5.1.dist-info/METADATA
-RUN rm -rf /root/miniconda-25.7.0/envs/emission/lib/python3.9/site-packages/jupyterlab/staging
-RUN rm -rf /root/miniconda-25.7.0/pkgs/jupyterlab-4.3.4-pyhd8ed1ab_0/site-packages/jupyterlab/staging
-RUN rm -rf /root/miniconda-25.7.0/envs/emission/lib/python3.9/site-packages/jupyterlab/tests
-RUN rm -rf /root/miniconda-25.7.0/pkgs/jupyterlab-4.3.4-pyhd8ed1ab_0/site-packages/jupyterlab/tests
+RUN rm -rf /root/miniconda-25.11.1/pkgs/jupyterlab-4.4.6-pyhd8ed1ab_0/site-packages/jupyterlab/staging
+RUN rm -rf /root/miniconda-25.11.1/envs/emission/lib/python3.11/site-packages/jupyterlab/staging
+RUN rm -rf /root/miniconda-25.11.1/lib/python3.12/site-packages/jupyterlab/staging
+RUN rm -rf /root/miniconda-25.11.1/pkgs/jupyterlab-4.4.6-pyhd8ed1ab_0/site-packages/jupyterlab/tests
+RUN rm -rf /root/miniconda-25.11.1/envs/emission/lib/python3.11/site-packages/jupyterlab/tests
+RUN rm -rf /root/miniconda-25.11.1/lib/python3.12/site-packages/jupyterlab/tests
 
 RUN /bin/bash -c "find /root/miniconda-*/pkgs -wholename \*info/test\* -type d | xargs rm -rf"
 
